# wake-on-lan-discord

./: .gitignore  README.md  pyproject.toml  vscode.code-workspace
esp32-wol/: esp32-wol.ino  secrets.h
sketch0/: sketch0.ino
wake-on-lan-discord/bot/: add_command.py  read_messages.py
wake-on-lan-discord/first-responder/: package.json  schema.sql  wrangler.toml
wake-on-lan-discord/first-responder/src/: index.ts
worker/: package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts  register.ts
