[project]
name = "remote-desktop"
version = "0.1.0"
dependencies = ["requests>=2.31.0"]
requires-python = ">=3.10"

[tool.yapf]
based_on_style = "yapf"
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 1
column_limit = 160
join_multiple_lines = true

[tool.pdm.dev-dependencies]
dev = ["yapf>=0.40.2"]
